infrastructure/coredns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-coredns
  namespace: kube-system
spec:
  selector:
    app: custom-coredns
  type: LoadBalancer
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
